# LilTradeBot

./: OUTPUT  README.md  pyproject.toml
liltradebot/: lil_trade_bot.py  main.py
liltradebot/broker/: __init__.py  alpaca.py  base.py  robinhood.py
liltradebot/delme/: aggregator.py  ai_agent.py  capitol_trades.py  config.py  market_data.py  news.py
liltradebot/marketdata/: finnhub_api.py
